[gd_scene load_steps=4 format=3 uid="uid://hghf53tjyueh"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_7rukl"]
[ext_resource type="PackedScene" uid="uid://cwl2us1o2q61h" path="res://game_scene.tscn" id="2_bflre"]
[ext_resource type="Script" path="res://Settings.gd" id="3_2kh7j"]

[node name="MainScene" type="Node3D"]
script = ExtResource("1_7rukl")
game_prefab = ExtResource("2_bflre")

[node name="Menus" type="CanvasLayer" parent="."]

[node name="Settings" type="PanelContainer" parent="Menus"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_2kh7j")

[node name="All" type="VBoxContainer" parent="Menus/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Options" type="HBoxContainer" parent="Menus/Settings/All"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Fullscreen" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Resolution" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Resolution
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FoV" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "FoV"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="MasterVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Master"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "SFX
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AmbientVolume" type="Label" parent="Menus/Settings/All/Options/Labels"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Ambient"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="Menus/Settings/All/Options"]
layout_mode = 2

[node name="Fullscreen" type="CheckButton" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
button_pressed = true

[node name="Resolution" type="HBoxContainer" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="X" type="SpinBox" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
max_value = 20000.0
value = 1920.0
editable = false

[node name="Label" type="Label" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "x"

[node name="Y" type="SpinBox" parent="Menus/Settings/All/Options/Controls/Resolution"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
max_value = 20000.0
value = 1080.0
editable = false

[node name="FoV" type="SpinBox" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 179.0
value = 90.0

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4

[node name="MasterVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="SFXVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="AmbientVolume" type="HSlider" parent="Menus/Settings/All/Options/Controls"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
tick_count = 7
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="Menus/Settings/All"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Menus/Settings/All"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Apply" type="Button" parent="Menus/Settings/All/Buttons"]
layout_mode = 2
disabled = true
text = "Apply"

[node name="Cancel" type="Button" parent="Menus/Settings/All/Buttons"]
layout_mode = 2
text = "Cancel
"

[connection signal="toggled" from="Menus/Settings/All/Options/Controls/Fullscreen" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/Resolution/X" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/Resolution/Y" to="Menus/Settings" method="_on_change"]
[connection signal="value_changed" from="Menus/Settings/All/Options/Controls/FoV" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/MasterVolume" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/SFXVolume" to="Menus/Settings" method="_on_change"]
[connection signal="drag_ended" from="Menus/Settings/All/Options/Controls/AmbientVolume" to="Menus/Settings" method="_on_change"]
[connection signal="pressed" from="Menus/Settings/All/Buttons/Apply" to="Menus/Settings" method="_on_apply_pressed"]
[connection signal="pressed" from="Menus/Settings/All/Buttons/Cancel" to="Menus/Settings" method="_on_cancel_pressed"]
